# sequence_to_function_model_tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: 01_sequence_encoding_and_intervals.ipynb  02_lora_finetuning_workflow.ipynb  03_variant_effect_prediction.ipynb
interpret/: __init__.py  attribution.py  ism.py  modisco.py
seq_tools/: __init__.py  encoding.py  fasta.py  intervals.py  labels.py  variant.py
tests/: test_encoding.py  test_finetune.py  test_intervals.py  test_losses.py  test_multitask_head.py  test_variant.py
training/: __init__.py  dataset.py  finetune.py  losses.py  multitask_head.py
