[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-foundation-model-tools"
version = "0.1.0"
description = "Tools for training, fine-tuning, and interpreting genomic sequence-to-function models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
]

[project.optional-dependencies]
full = [
    "grelu",
    "pysam",
    "pyranges",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["seq_tools*", "training*", "interpret*"]
